fix(ne-button): Remove dotted inner border on firefox

--- a/elements/ne-button/src/ne-button.pcss
+++ b/elements/ne-button/src/ne-button.pcss
@@ -57,6 +57,10 @@ button,
   font-size: var(--buttonFontSize);
   box-shadow: var(--buttonShadow);
 
+  &::-moz-focus-inner {
+    border: 0;
+  }
+
   &:hover {
     border-color: var(--buttonHoverBorder);
     background: var(--buttonHoverBackground);
